# Novel_Total_Processor

./: .gitignore  .issue_body_temp.md  BOUNDARY_SPLITTING_IMPLEMENTATION.md  CHAPTER_SPLITTING_IMPROVEMENTS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY_OLD.md  PULL_REQUEST_SUMMARY.md  README.md  STAGE4_ENHANCEMENTS.md  STAGE4_ENHANCEMENT_FIXES_SUMMARY.md  STAGE4_ESCALATION_UPDATES.md  demo_boundary_splitting.py  demo_korean_novel_splitting.py  demo_stage4_advanced.py  demo_stage4_enhancements.py  diag.py  init-project.js  package.json  pyproject.toml  requirements.txt  test_boundary_issue.py  test_boundary_splitting.py  test_boundary_validation.py  test_cli.py  test_complete_scenario.py  test_db_config.py  test_level2_auto_validation.py  test_level3_integration.py  test_logger.py  test_merge_logic.py  test_stage0.py  test_stage1.py  test_stage2.py  test_stage3.py  test_stage4_advanced.py  test_stage4_enhancements.py  test_stage4_fixes.py  test_stage4_pipeline.py  test_stage5.py  (+2 more)
.agent/: constitution.md
.agent/workflows/: finish-task.md  handover.md  start-task.md  warmup.md
.gemini/: GEMINI.md
config/: config.yml  epub_style.css  rules.yml
docs/: BOUNDARY_SPLITTING_IMPLEMENTATION_KR.md  Codex_설계.md  HANDOVER.md  IMPLEMENTATION_COMPLETE_KR.md  IMPLEMENTATION_SUMMARY_KR.md  ISSUES.md  Novel_Total_Processor_설계서_v2.md  PROJECT_TEMPLATE_GUIDE.md  Perplexity-API.md  Perplexity-API_Agent.md  Perplexity-API_Search.md  Perplexity-SDK.md  SHELL_GUIDE.md  STAGE4_ENHANCEMENTS_KR.md  STAGE4_ENHANCEMENT_FIXES_SUMMARY_KR.md  STAGE4_ESCALATION_UPDATES_KR.md  implementation_plan_v1.md  task.md  task.md.resolved  수정계획.md  스크립트_필요기능.txt
docs/reference/NovelAIze-SSR_Source_v3.0/: README.md  config.json  prompts.txt  run.bat
docs/reference/NovelAIze-SSR_Source_v3.0/novel_aize_ssr/: async_worker.py  base_client.py  checkpoint.py  config.json  config.py  config_manager.py  engine.py  file_io.py  gemini_client.py  io_handler.py  main.py  pattern_manager.py  rate_limit_tester.py  rate_limiter.py  reformatter.py  report_formatter.py  requirements.txt  sampler.py  splitter.py  structure.py  summarize_manager.py  ui_helper.py
docs/reference/Novel_Title_Normalizer_v1.2.4_Release/: .env.example  Novel_Title_Normalizer_Run.bat  README_Rules.txt
docs/reference/Novel_Title_Normalizer_v1.2.4_Release/scripts/: Novel_Title_Normalizer_v1.2.4.ps1
docs/reference/ez-books-1.0.1/: .env.example  .gitignore  .releaserc  AGENTS.md  CHANGELOG.md  Cargo.toml  QUICKSTART.md  README.md
docs/reference/ez-books-1.0.1/.github/workflows/: ci.yml
docs/reference/ez-books-1.0.1/migrations/: 001_initial_schema.sql
docs/reference/ez-books-1.0.1/src/: book_identifier.rs  book_model.rs  book_repository.rs  config.rs  database_connection.rs  epub_cover_extractor.rs  epub_parser.rs  error.rs  file_storage.rs  gallery_renderer.rs  html_templates.rs  main.rs  openlibrary_client.rs  openlibrary_types.rs  reader_renderer.rs  route_filters.rs  route_handlers.rs  static_assets.rs  upload_handler.rs
docs/reference/ez-books-1.0.1/static/css/: gallery.css  reader.css
docs/reference/ez-books-1.0.1/static/js/: upload.js
docs/reference/txt-to-epub-converter-main/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README_zh.md  pyproject.toml  requirements.txt  setup.py
docs/reference/txt-to-epub-converter-main/.claude/: settings.local.json
docs/reference/txt-to-epub-converter-main/examples/: README.md  advanced_example.py  basic_example.py  batch_convert.py
docs/reference/txt-to-epub-converter-main/src/txt_to_epub/: __init__.py  core.py  css.py  data_structures.py  html_generator.py  llm_parser_assistant.py  output_helper.py  parser.py  parser_config.py  resume_state.py  word_count_validator.py
docs/reference/txt-to-epub-converter-main/src/txt_to_epub/llm/: __init__.py  chapter_assistant.py  client.py  data_structures.py  disambiguation.py  format_identifier.py  prompt_builder.py  structure_inferrer.py  title_generator.py  toc_assistant.py
docs/reference/txt-to-epub-converter-main/src/txt_to_epub/parser/: __init__.py  core.py  language_detector.py  patterns.py  title_enhancer.py  toc_remover.py  validator.py
docs/reference/txt-to-epub-converter-main/src/txt_to_epub/validator/: __init__.py  analyzer.py  counter.py  messages.py  reporter.py  word_count_validator.py
docs/reference/txt-to-epub-converter-main/tests/: test_basic.py
docs/reference/txt2pub/: txt2pub.html
scripts/: find_ghost.py  finish-task.js  force_reset.py  recover_filenames.py  repack_epub.py  reset_db.py  start-task.js  verify_pipeline.py
src/novel_total_processor/: __init__.py  cli.py  menu.py
src/novel_total_processor/ai/: __init__.py  gemini_client.py  perplexity_client.py
src/novel_total_processor/config/: loader.py
src/novel_total_processor/db/: __init__.py  schema.py
src/novel_total_processor/stages/: __init__.py  ai_scorer.py  chapter.py  epub_templates.py  global_optimizer.py  pattern_manager.py  sampler.py  splitter.py  stage0_indexing.py  stage1_metadata.py  stage2_episode.py  stage3_filename.py  stage4_splitter.py  stage5_epub.py  stage6_batch.py  structural_analyzer.py  topic_change_detector.py  verifier.py
src/novel_total_processor/utils/: db_viewer.py  logger.py  text_cleaner.py
test_env/: test.db
test_env/source/: dummy.txt  괴담에 떨어져도 출근을 해야 하는구나 1 (1-25).txt
