[package]
name = "ez-books"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"

[dependencies]
# Web Server
warp = "0.3"
tokio = { version = "1.48", features = ["full"] }
bytes = "1.11"
futures = "0.3"

# Database
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite", "migrate"] }

# EPUB Processing
epub = "2.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"

# HTTP Client (with RustTLS)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Static File Embedding
rust-embed = { version = "8.9", features = ["debug-embed"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }

# Error Handling
thiserror = "2.0"
anyhow = "1.0"

# Image Processing (for cover extraction)
image = "0.25"

# UUID Generation
uuid = { version = "1.11", features = ["v4", "serde"] }

# MIME type detection for static files
mime_guess = "2.0"

# HTML sanitization
ammonia = "4.0"

[dev-dependencies]
tempfile = "3.15"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
